--- a/style.css
+++ b/style.css
@@ -361,11 +361,15 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/phone-background.png);
+        background-image: url(images/phone-background.jpg);
     }
     .header-text{
         margin-top: 100%;
         font-size: 16px;
+        
+    }
+    .header-text h1 span{
+        color: #fff;
     }
     .header-text h1{
         font-size: 30px;
